Externalize CORS allowed origins via CORS_ALLOWED_ORIGINS env var